force-app/main/default/objects/Account/fields/Cooperative_Group_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Cooperative_Group_Affiliation__c</fullName>
    <label>Cooperative Group Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECOG</fullName>
            </value>
            <value>
                <fullName>SWOG</fullName>
            </value>
            <value>
                <fullName>COG</fullName>
            </value>
            <value>
                <fullName>Alliance(CALGB,NCCTG,ACOSOG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>