force-app/main/default/objects/Account/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <description>Group purchasing organization</description>
    <label>GPO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GPO</valueSetName>
    </valueSet>
</CustomField>