force-app/main/default/objects/Account/fields/Teaching_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teaching Hospital ?</label>
    <type>Checkbox</type>
</CustomField>