force-app/main/default/objects/Account/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <description>Wholesaler</description>
    <label>Wholesaler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wholesaler</valueSetName>
    </valueSet>
</CustomField>